# ai-archive

./: .dockerignore  .env.example  .erosion-baseline.json  .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  pyproject.toml  run.sh
.basedpyright/: baseline.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: deploy.yml  e2e-videos-cleanup.yml  e2e-videos.yml
assets/: archive.css
backend/app/: context.py  db.py  deps.py  logging_setup.py  main.py  media_kind.py  migrations_runner.py  secrets.py  seed.py  settings.py  shutdown.py  startup.py  timecode.py  uploaded_ids.py
backend/migrations/: 0001_initial.sql  0002_ai_store_files.sql  0003_provider_id_and_caches.sql  0004_pending_operations_and_connection_events.sql  0005_workspaces.sql  0006_cache_actions_log.sql  0007_prefetch_queue.sql  0008_clip_list_cache.sql  0009_prompts_and_versions.sql  0010_live_sessions.sql  0011_REVERTED.txt  0011_prompt_media_kind.sql  0011_studio.sql  0012_prompt_media_kind.sql  0013_studio.sql  0014_review_items_studio_run.sql  0015_jobs_run_group.sql  0016_run_telemetry.sql  0017_studio_sets.sql  0018_uploaded_clips.sql  0019_poster_cache.sql  0020_enum_values.sql  0020_user_roles.sql  0021_uploads_instance_namespace.sql  0021_user_roles.sql  0022_drop_last_seen.sql  0022_review_items_synced_at.sql  0023_clip_versions.sql  0024_model_config.sql  0024_prefetch_progress.sql  0025_prompt_version_media_resolution.sql  0026_run_telemetry_resolution_index.sql  0027_drop_live_search_calls.sql  0028_run_telemetry_occurred_at_index.sql  0029_jobs_run_params.sql
backend/seeds/: default_template.json  image_template.json  live_system_instruction_cs.json
deploy/: README.md  catdv-annotator.service  cloudrun.env.yaml  deploy-staging.sh  enable-gemini-live.sh  entrypoint.sh  litestream.yml  staging.env.yaml
docs/: ARCHITECTURE.md  CONTEXT.md  DEPLOY.md  architecture-invariants.md  decisions.md  design-language.md  fs-archive-format.md  gemini-live-lessons.md
docs/adr/: 0001-python-only-stack-no-node-frontend.md  0002-aiinputstore-port-distinct-from-archiveprovider.md  0003-pr3-single-migration-file-clip-ttl.md  0004-pr4-enqueue-atomic-conflict-locus-adapter.md  0005-pr5-primary-pin-workspace-clips-fk-migration.md  0006-pr6-cache-layer-signals-audit-lru.md  0007-pr7-filesystem-archive-adapter.md  0008-ui-mvp-five-decisions.md  0009-pr8-media-prefetch-cache-ui-wiring.md  0010-prompt-management-versioned-prompts.md  0011-prompt-management-post-merge-polish.md  0012-clip-annotate-ui-draft-view-scope-toggle.md  0013-clip-list-filters-cache-annotations-dropdowns.md  0014-local-filesystem-proxy-resolution.md  0015-offline-fallback-auto-degrade-manual-reconnect.md  0016-gemini-live-clip-assistant-browser-direct.md  0017-offline-mode-annotate-available-marker-nav-scope.md  0018-gemini-live-clip-assistant-wss-view-model.md  0019-tier1-tooling-ruff-basedpyright-precommit.md  0020-typed-get-ctx-accessor.md  0021-pr-h-cache-services-construction-collapse.md  0022-tier-2-architecture-execution.md  0023-boot-login-failures-keep-client-for-retry.md  0024-shutdown-button.md  0025-video-list-thumbnails-and-shared-component.md  0026-image-clip-support-via-original-media.md  0026-prompt-studio.md  0027-image-annotation-prompt-and-media-kind.md  0027-prompt-studio-implementation-deviations.md  0028-image-clip-support-via-original-media.md  0028-ui-responsiveness-local-assets-feedback-scroll.md  0029-cache-pagination-shared-with-clips.md  0029-image-annotation-prompt-and-media-kind.md  0030-ui-responsiveness-local-assets-feedback-scroll.md  0031-cache-pagination-shared-with-clips.md  0032-shutdown-graceful-timeout.md  0033-prompt-studio-pr1-shell-and-run-loop.md  0034-prompt-studio-pr2-version-compare.md  0035-draft-review-accept-ui.md  0035-studio-shared-player-chrome-and-focused-clip-url.md  (+113 more)
docs/audit/: 2026-06-11-repo-audit.md
docs/backlog/: 2026-05-23-tier-2-handover.md
docs/feasibility/: 2026-06-23-restate-workflow-visualization.md
docs/onboarding/: 01-overview.md  02-architecture.md  03-tech-stack.md  04-running-locally.md  05-catdv-license-discipline.md  06-coding-standards.md  07-codebase-tour.md  README.md  development-workflow.md
docs/plans/: 2026-05-18-catdv-annotator-backend.md  2026-05-19-pr1-archive-port-and-catdv-adapter.md  2026-05-19-pr2-ai-input-store-port-and-gcs-adapter.md  2026-05-19-pr4-write-queue-and-sync-engine.md  (+59 more)
pr-108/: admin-calibrate-prompt.webm  admin-models-rates.webm  admin-usage-budget.webm  bulk-annotate-start.webm  cancel-running-batch.webm  index.html  review-edit-annotation.webm  search-filter-awaiting-review.webm  search-filter-by-name.webm  search-filter-not-annotated.webm  search-no-results.webm  search-restore-after-clear.webm
pr-113/: admin-calibrate-prompt.webm  admin-models-rates.webm  admin-usage-budget.webm  bulk-annotate-start.webm  cancel-running-batch.webm  index.html  player-keyboard-shortcuts.webm  player-marker-navigation.webm  player-marker-playstate.webm  player-play-pause.webm  player-step-frames.webm  review-edit-annotation.webm  search-filter-awaiting-review.webm  search-filter-by-name.webm  search-filter-not-annotated.webm  search-no-results.webm  search-restore-after-clear.webm
scripts/: setup-gcp.sh
tests/: conftest.py
tools/: erosion_gate.py
(+828 files in other folders)
