[project]
name = "catdv-annotator"
version = "0.0.1"
description = "AI annotation engine for the Pragafilm CatDV archive"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "google-genai>=0.3",
  "google-cloud-storage>=2.18",
  "google-cloud-secret-manager>=2.20",
  "aiosqlite>=0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sse-starlette>=2.1",
  "python-json-logger>=2.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
