[project]
name = "catdv-annotator"
version = "0.0.1"
description = "AI annotation engine for the Pragafilm CatDV archive"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "google-genai>=0.3",
  "google-cloud-storage>=2.18",
  "google-auth>=2.0",  # IAP JWT verification (auth/adapters/iap.py); also a transitive dep

  "aiosqlite>=0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sse-starlette>=2.1",
  "python-json-logger>=2.0",
  "jinja2>=3.1",
  "ftfy>=6.2",
  "pillow>=10.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.3",
  "playwright>=1.59",
  "ruff>=0.7",
  "respx>=0.21",
  "basedpyright>=1.18",
  "pre-commit>=3.7",
  "import-linter>=2.0",
  "interrogate>=1.7",
  "radon>=6.0",
  "pylint>=3.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# ASYNC240 fires on Path.exists()/stat() inside async functions and pushes
# users toward anyio.path/trio.Path. We don't use anyio/trio, and the calls
# in question are on local SSD where blocking time is sub-millisecond — the
# to_thread hop costs more than it saves. The one legitimate blocking-I/O
# case (large proxy download) is handled with asyncio.to_thread explicitly.
ignore = ["ASYNC240"]

[tool.ruff.lint.per-file-ignores]
# Tests sometimes assert against the broad exception surface a contract
# raises, so `pytest.raises(Exception)` is intentional, not a bug.
"tests/**/*.py" = ["B017"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
# Module-level coverage is the goal of the §3.3 sweep — every backend file
# now has a top-of-file docstring. Function/method docstrings are a separate
# ratchet; the fail-under here is set to current coverage with a small
# headroom so regressions on the module front are caught, while leaving the
# rest of the per-callable ratchet for a follow-up.
fail-under = 30
exclude = ["tests", "backend/migrations"]
verbose = 1

[tool.basedpyright]
include = ["backend", "tests"]
pythonVersion = "3.12"
# Start non-strict — we want a baseline number, not a wall of warnings.
# Ratchet up by promoting specific rules to "error" as code gets clean.
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
